; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_revert.c_option_parse_x.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_revert.c_option_parse_x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.replay_opts** }
%struct.replay_opts = type { i64, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @option_parse_x to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @option_parse_x(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.option*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.replay_opts**, align 8
  %9 = alloca %struct.replay_opts*, align 8
  store %struct.option* %0, %struct.option** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.option*, %struct.option** %5, align 8
  %11 = getelementptr inbounds %struct.option, %struct.option* %10, i32 0, i32 0
  %12 = load %struct.replay_opts**, %struct.replay_opts*** %11, align 8
  store %struct.replay_opts** %12, %struct.replay_opts*** %8, align 8
  %13 = load %struct.replay_opts**, %struct.replay_opts*** %8, align 8
  %14 = load %struct.replay_opts*, %struct.replay_opts** %13, align 8
  store %struct.replay_opts* %14, %struct.replay_opts** %9, align 8
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %40

18:                                               ; preds = %3
  %19 = load %struct.replay_opts*, %struct.replay_opts** %9, align 8
  %20 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = load %struct.replay_opts*, %struct.replay_opts** %9, align 8
  %23 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = add nsw i64 %24, 1
  %26 = load %struct.replay_opts*, %struct.replay_opts** %9, align 8
  %27 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @ALLOC_GROW(i32* %21, i64 %25, i32 %28)
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 @xstrdup(i8* %30)
  %32 = load %struct.replay_opts*, %struct.replay_opts** %9, align 8
  %33 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %32, i32 0, i32 1
  %34 = load i32*, i32** %33, align 8
  %35 = load %struct.replay_opts*, %struct.replay_opts** %9, align 8
  %36 = getelementptr inbounds %struct.replay_opts, %struct.replay_opts* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = add nsw i64 %37, 1
  store i64 %38, i64* %36, align 8
  %39 = getelementptr inbounds i32, i32* %34, i64 %37
  store i32 %31, i32* %39, align 4
  store i32 0, i32* %4, align 4
  br label %40

40:                                               ; preds = %18, %17
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @ALLOC_GROW(i32*, i64, i32) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
